--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://stylehubbrand001:9Zw1dSvS6DT8Krbg@cluster0.rr47asa.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+EMAIL_USER=stylehubbrand001@gmail.com
+EMAIL_PASS=lkya hkku pwhs edwe
