--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongoos": "^0.0.1-security",
-    "mongoose": "^8.17.1"
+    "mongoose": "^8.17.1",
+    "nodemailer": "^7.0.5",
+    "razorpay": "^2.9.6"
   }
 }
